tests/dag/subdir-wrong-type.fab
#
# RUN: %fab --format=null %s 2> %t || true
# RUN: %check %s -input-file %t
#

foo = record
{
	# CHECK: {{.*}}/subdir-wrong-type.fab:10:{{[0-9\-]+}}: error: expected file,
	# CHECK:   found string
	subdir = 'hello.txt';
};
